feat(Records): implemented endpoint to create a new record by executing an operation
