# src/operations/data/get-operation-by-type.repository.ts
@@ -1,0 +1,11 @@
+import { Pool } from 'pg';
+import { GetOperationRepository } from '../../records/execute-operation.interactor';
+
+const statement = 'select id, type, cost from "operation" where type = $1';
+
+export const makeGetOperationByTypeRepository =
+  (dependencies: { pool: Pool }): GetOperationRepository =>
+  async (operationType: string) => {
+    const { rows } = await dependencies.pool.query(statement, [operationType]);
+    return rows[0];
+  };
